django/oauth/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-oauth
  labels:
    app: django-oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-oauth
  template:
    metadata:
      labels: 
        app: django-oauth
    spec:
      containers:
        - name: django-oauth
          image: acrappelent.azurecr.io/django-oauth:v0.6
          ports:
            - containerPort: 8000
