django/oauth/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: django-oauth-service
spec:
  selector:
    app: django-oauth
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
