django/oauth/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-django-oauth
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - dev.oauth.appelent.com
    secretName: tls-secret-django-oauth
  rules:
  - host: dev.oauth.appelent.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: django-oauth-service
            port:
              number: 8000
  ingressClassName: nginx
